--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/react-redux": "^7.1.28",
     "antd": "^5.10.2",
     "classnames": "^2.3.2",
+    "d3": "^7.8.5",
+    "d3-delaunay": "^6.0.4",
+    "d3-selection": "^3.0.0",
     "gl-matrix": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-delaunay": "^6.0.4",
+    "@types/d3-selection": "^3.0.10",
     "@types/three": "^0.158.3"
   }
 }
